more playing with boxes

--- a/index.html
+++ b/index.html
@@ -4,55 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Implementing CSS</title>
-  <style>
-    body {
-      background-color: pink;
-      color: white;
-    }
-
-    .primary-heading{
-      font-size: 40px;
-      font-weight: bold;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    #welcome, #about {
-      background-color: navy;
-      border: 1px solid;
-      padding: 10px;
-      margin-bottom: 5px;
-    }
-    /* Nested CSS */
-    #welcome p {
-      color: red;
-    }
-
-  </style>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-  <div id="welcome">
-    <h2 class="primary-heading"> Heading </h2>
+  <div id="box-1">
+    <h2> Box 1 </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
+      </p>
+  </div>
+</br>
+  <div id="box-2">
+    <h2> Box 2 </h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
       </p>
   </div>
 
-  <div id="about">
-    <h2 class="secondary-heading"> Welcome </h2>
+  <div id="box-3">
+    <h2> Box 3 </h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
       </p>
   </div>
 
-  <div>
-    <h2>
+  <div id="box-4">
+    <h2> Box 4</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
       </p>
   </div>
 
-  </h2>
 </body>
 </html>
