box model and stuff

--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
 </head>
 <body>
 
-  <div id="box-1">
+  <div class="box">
     <h2> Box 1 </h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
       </p>
   </div>
 </br>
-  <div id="box-2">
+  <div class="box">
     <h2> Box 2 </h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
       </p>
   </div>
 
-  <div id="box-3">
+  <div class="box-3">
     <h2> Box 3 </h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.      
       </p>
   </div>
 
-  <div id="box-4">
+  <div class="box-4">
     <h2> Box 4</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste perferendis modi.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.      
       </p>
   </div>
 
