--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <div class="container">
+    
+    <a href="http://whoisrabbit.com"> Click here </a>
+
     <div class="box" id="box1">
       <h2> Box 1 </h2>
         <p>
@@ -37,7 +40,7 @@
     </div>
 
     <div class="clr"></div>
-    
+
     <div class="box" id="box4">
       <h2> Box 3 </h2>
         <p>
