--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <title>Implementing CSS</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<br>
 
   <div class="container">
     
-    <a href="http://whoisrabbit.com"> Click here </a>
-
+    <a class= "btn" href="http://whoisrabbit.com"> Click here </a>
+    <br>
+    <br>
+    <button class="btn"> 
+      My Button
+    </button>
+    <br>
+    <br>
     <div class="box" id="box1">
       <h2> Box 1 </h2>
         <p>
