--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <br>
-
+<body>
+  <ul class="nav-bar">
+    <li><a href="#"> Home </a></li>
+    <li><a href="#"> About </a></li>
+    <li><a href="#"> Services </a></li>
+    <li><a href="#"> Contact </a></li>
+  </ul>
+  <br>
+  <br>
+  <ul class="side-menu">
+    <li><a href="#"> Home </a></li>
+    <li><a href="#"> About </a></li>
+    <li><a href="#"> Services </a></li>
+    <li><a href="#"> Contact </a></li>
+  </ul>
   <div class="container">
-    
     <a class= "btn" href="http://whoisrabbit.com"> Click here </a>
     <br>
     <br>
