nav bar playing around!

--- a/index.html
+++ b/index.html
@@ -15,59 +15,39 @@
     <li><a href="#"> Contact </a></li>
   </ul>
   <br>
+  <img src="img/badges/boost.webp" alt="">
   <br>
-  <ul class="side-menu">
-    <li><a href="#"> Home </a></li>
-    <li><a href="#"> About </a></li>
-    <li><a href="#"> Services </a></li>
-    <li><a href="#"> Contact </a></li>
-  </ul>
-  <div class="container">
-    <a class= "btn" href="http://whoisrabbit.com"> Click here </a>
-    <br>
-    <br>
-    <button class="btn"> 
-      My Button
-    </button>
-    <br>
-    <br>
-    <div class="box" id="box1">
-      <h2> Box 1 </h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-          ducimus nemo sunt, reiciendis quaerat eaque.
-        </p>
-    </div>
-      
-    <div class="box" id="box2">
-      <h2> Box 2 </h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-          ducimus nemo sunt, reiciendis quaerat eaque.
-        </p>
-    </div>
-      
-    <div class="box" id="box3">
-      <h2> Box 3 </h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-          ducimus nemo sunt, reiciendis quaerat eaque.
-        </p>
-    </div>
-
-    <div class="clr"></div>
-
-    <div class="box" id="box4">
-      <h2> Box 3 </h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-          ducimus nemo sunt, reiciendis quaerat eaque.
-        </p>
-    </div>
-  </div>  
+  <div class="box" id="box-1">
+    <h2> Box One </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
+      </p>
+  </div>
+  <div class="box" id="box-2">
+    <h2> Box Two </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
+      </p>
+  </div>
+  <div class="box" id="box-3">
+    <h2> Box Three </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
+      </p>
+  </div>
+  <div class="box" id="box-4">
+    <h2> Box Four </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
+      </p>
+  </div>
 </body>
 </html>
