playing with boxes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <br>
 <body>
-  <ul class="nav-bar">
+  <!-- <ul class="nav-bar">
     <li><a href="#"> Home </a></li>
     <li><a href="#"> About </a></li>
     <li><a href="#"> Services </a></li>
@@ -16,7 +16,7 @@
   </ul>
   <br>
   <img src="img/badges/boost.webp" alt="">
-  <br>
+  <br> -->
   <div class="box" id="box-1">
     <h2> Box One </h2>
       <p>
@@ -25,24 +25,36 @@
         ducimus nemo sunt, reiciendis quaerat eaque.
       </p>
   </div>
-  <div class="box" id="box-2">
-    <h2> Box Two </h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-        ducimus nemo sunt, reiciendis quaerat eaque.
-      </p>
+  <div class="container">
+    <div class="box" id="box-2">
+      <h2> Box Two </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+          ducimus nemo sunt, reiciendis quaerat eaque.
+        </p>
+    </div>
+    <div class="box" id="box-3">
+      <h2> Box Three </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+          ducimus nemo sunt, reiciendis quaerat eaque.
+        </p>
+    </div>
   </div>
-  <div class="box" id="box-3">
-    <h2> Box Three </h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-        ducimus nemo sunt, reiciendis quaerat eaque.
-      </p>
-  </div>
+
   <div class="box" id="box-4">
     <h2> Box Four </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
+        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
+        ducimus nemo sunt, reiciendis quaerat eaque.
+      </p>
+  </div>
+
+  <div class="box" id="box-5">
+    <h2> Box five </h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
         perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
