--- a/index.html
+++ b/index.html
@@ -1,65 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Implementing CSS</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<br>
-<body>
-  <!-- <ul class="nav-bar">
-    <li><a href="#"> Home </a></li>
-    <li><a href="#"> About </a></li>
-    <li><a href="#"> Services </a></li>
-    <li><a href="#"> Contact </a></li>
-  </ul>
-  <br>
-  <img src="img/badges/boost.webp" alt="">
-  <br> -->
-  <div class="box" id="box-1">
-    <h2> Box One </h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-        ducimus nemo sunt, reiciendis quaerat eaque.
-      </p>
-  </div>
-  <div class="container">
-    <div class="box" id="box-2">
-      <h2> Box Two </h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-          ducimus nemo sunt, reiciendis quaerat eaque.
-        </p>
-    </div>
-    <div class="box" id="box-3">
-      <h2> Box Three </h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-          perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-          ducimus nemo sunt, reiciendis quaerat eaque.
-        </p>
-    </div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Form Styling</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      }
 
-  <div class="box" id="box-4">
-    <h2> Box Four </h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-        ducimus nemo sunt, reiciendis quaerat eaque.
-      </p>
-  </div>
+      body {
+        background: #344a72;
+        font-family: 'Raleway', sans-serif;
+        line-height: 1.8; 
+      }
 
-  <div class="box" id="box-5">
-    <h2> Box five </h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam sunt vero rerum ad maxime illo obcaecati iste 
-        perferendis modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum molestias praesentium dolorum esse 
-        ducimus nemo sunt, reiciendis quaerat eaque.
-      </p>
-  </div>
-</body>
+      a {
+        text-decoration: none;
+      }
+
+      #container {
+        margin: 20px auto;
+        max-width: 500px;
+        padding: 100px 100px;
+      }
+
+      .form-wrap {
+        background: white;
+        color: #333;
+        width: 100%;
+        padding: 20px;
+      }
+
+      .form-wrap h1,
+      .form-wrap p {
+        display: block;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      .form-wrap .form-group {
+        display: block;
+        margin-bottom: 10px;
+      }
+
+      .form-wrap .form-group label {
+        display: block;
+      }
+
+      .form-wrap .form-group input {
+        padding: 5px;
+        border-radius: 3px;
+        width: 100%;
+        color: #666;
+      }
+
+      .form-wrap button {
+        display: block;
+        color: white;
+        background: #49c1a2;
+        margin: auto;
+        padding: 10px 20px;
+        width: 100%;
+      }
+
+      .form-wrap button:hover {
+        background: #37a08e;
+      }
+
+      .form-wrap .bottom-text {
+        font-size: 13;
+        text-align: center;
+        padding-top: 20px;
+
+      }
+
+      footer {
+      text-align: center;
+      color: white;
+      padding: 10px;
+      }
+
+      footer a {
+        color:  #49c1a2;
+      }
+
+  </style>
+  </head>
+  <body>
+    <div id="container">
+      <div class="form-wrap">
+        <h1>Sign Up</h1>
+        <p>It's free and only takes a minute</p>
+        <form>
+          <div class="form-group">
+            <label for="first-name">First Name</label>
+            <input type="text" name="firstName" id="first-name" />
+          </div>
+          <div class="form-group">
+            <label for="last-name">Last Name</label>
+            <input type="text" name="lastName" id="last-name" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" />
+          </div>
+          <div class="form-group">
+            <label for="password2">Confirm Password</label>
+            <input type="password" name="pasword2" id="password2" />
+          </div>
+          <button type="submit" class="btn">Sign Up</button>
+          <p class="bottom-text">
+            By clicking the Sign Up button, you agree to our
+            <a href="#">Terms & Conditions</a> and
+            <a href="#">Privacy Policy</a>
+          </p>
+        </form>
+      </div>
+      <footer>
+        <p>Already have an account? <a href="#">Login Here</a></p>
+      </footer>
+    </div>
+  </body>
 </html>
