--- a/index.html
+++ b/index.html
@@ -27,36 +27,34 @@
       }
 
       #container {
-        margin: 20px auto;
-        max-width: 500px;
-        padding: 100px 100px;
+        margin: 30px auto;
+        max-width: 400px;
+        padding: 20px;
       }
 
       .form-wrap {
         background: white;
         color: #333;
-        width: 100%;
-        padding: 20px;
+        padding: 15px 25px;
       }
 
       .form-wrap h1,
       .form-wrap p {
-        display: block;
-        margin-bottom: 10px;
         text-align: center;
       }
 
       .form-wrap .form-group {
-        display: block;
-        margin-bottom: 10px;
+        margin-top: 10px;
       }
 
       .form-wrap .form-group label {
         display: block;
+        color: #666;
       }
 
       .form-wrap .form-group input {
-        padding: 5px;
+        padding: 10px;
+        border: #ddd 1px solid;
         border-radius: 3px;
         width: 100%;
         color: #666;
@@ -66,9 +64,11 @@
         display: block;
         color: white;
         background: #49c1a2;
-        margin: auto;
-        padding: 10px 20px;
+        border: #666 1px solid;
+        margin-top: 10px;
+        padding: 10px;
         width: 100%;
+        cursor: pointer;
       }
 
       .form-wrap button:hover {
@@ -78,14 +78,13 @@
       .form-wrap .bottom-text {
         font-size: 13;
         text-align: center;
-        padding-top: 20px;
-
+        margin-top: 20px;
       }
 
       footer {
       text-align: center;
       color: white;
-      padding: 10px;
+      margin-top: 10px;
       }
 
       footer a {
