--- a/index.html
+++ b/index.html
@@ -3,54 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to the most extraordinary hotel">
-  <title>Hotel Bt Welcome</title>
+  <title>VH and VW Units</title>
 
-  <!-- Important links and stuff! -->
-  <link rel="stylesheet" href="css/style.css">
+  <style>
+    *{
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    header {
+      background: #333 url('https://source.unsplash.com/daily') 
+      no-repeat center/cover;
+      color: white;
+      height: 100vh;
+      text-align: center;
+      padding: 2rem;
+      padding-top: 10rem;
+    }
+
+    header h1 {
+      font-size: 3rem;
+    }
+
+    header p {
+      margin: 1rem 0;
+    }
+
+    .btn {
+      display: inline-block;
+      text-decoration: none;
+      background: white;
+      color: black;
+      padding: 0.75rem 2rem;
+    }
+
+  </style>
 </head>
 <body>
-  <header>
-    <nav id="navbar">
-      <div class="container">
-        <h1 class="logo"> <a href="index.html"> HBT </a> </h1>
-        <ul>
-          <li> <a class="current" href="index.html"> Home </a></li>
-          <li> <a href="about.html"> About </a></li>
-          <li> <a href="contact.html"> Contact </a></li>
-        </ul>
-      </div>
-    </nav>
-
-    <div id="showcase">
-      <div class="container">
-        <div class="showcase-content">
-          <h1> <span class="text-primary"> Enjoy </span> Your Stay</h1>
-          <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam,
-            quod, quaerat, quasi, quidem, quibusdam, quod, quaerat, quasi,
-            quidem, quibusdam. 
-          </p>
-            <a class="btn" href="about.html"> About Our Hotel </a>
-        </div>
-      </div>
-    </div>
+  <header> 
+    <h1>Welcome to our server!</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta aliquam
+      quaerat dolorum reprehenderit itaque accusamus maxime neque impedit
+      deserunt fuga.
+    </p>
+    <a href="#" class="btn"> Found out More!</a>
   </header>
-
-  <section id="home-info" class="bg-dark">
-    <div class="info-img"></div>
-    <div class="info-conetnt">
-      <h2><span class="text-primary">The History</span> OF Our Hotel </h2>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere at ipsa
-        ex repudiandae aperiam voluptates aspernatur! Quam, vero, error quis
-        magnam cumque eveniet dolor unde doloremque, possimus ipsum
-        reprehenderit quaerat ea ullam corrupti. Maiores porro consequuntur rem
-        aliquam magni?
-      </p>
-      <a href="about.html" class="btn btn-light"> Read More</a>
-    </div>
-  </section>
   
 </body>
 </html>
