--- a/index.html
+++ b/index.html
@@ -3,57 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VH and VW Units</title>
+  <title>Flex Basics</title>
 
   <style>
-    *{
+    * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
     }
 
     body {
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    header {
-      background: #333 url('https://source.unsplash.com/daily') 
-      no-repeat center/cover;
-      color: white;
-      height: 100vh;
-      text-align: center;
-      padding: 2rem;
-      padding-top: 10rem;
+    .flex-container {
+      display: flex;
     }
 
-    header h1 {
-      font-size: 3rem;
-    }
-
-    header p {
-      margin: 1rem 0;
-    }
-
-    .btn {
-      display: inline-block;
-      text-decoration: none;
+    .item {
       background: white;
-      color: black;
-      padding: 0.75rem 2rem;
+      border: #ccc solid 2px;
+      margin: 10px;
+      padding: 10px;
+      text-align: center;
+      border-radius: 10px;
+      width: 200px;
+    }
+
+    .item-1 {
+      
     }
 
   </style>
 </head>
 <body>
-  <header> 
-    <h1>Welcome to our server!</h1>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta aliquam
-      quaerat dolorum reprehenderit itaque accusamus maxime neque impedit
-      deserunt fuga.
-    </p>
-    <a href="#" class="btn"> Found out More!</a>
-  </header>
+
+  <div class="flex-container">
+    <div class="item item1">
+      <h3>Item One</h3>
+    </div>
+
+    <div class="item item2">
+      <h3>Item Two</h3>
+    </div>
+
+    <div class="item item3">
+      <h3>Item Three</h3>
+    </div>
+  </div>
   
 </body>
 </html>
